<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0696F4"
    tools:context=".Step1Activity">

    <TextView
        android:id="@+id/step1"
        android:layout_width="180dp"
        android:layout_height="58dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical"
        android:text="@string/step1"
        android:textAppearance="@style/step"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/select_the_"
        android:layout_width="170dp"
        android:layout_height="22dp"
        android:gravity="center_vertical"
        android:text="@string/select_the_"
        android:textAppearance="@style/text1"
        app:layout_constraintStart_toStartOf="@+id/step1"
        app:layout_constraintTop_toBottomOf="@+id/step1"
        android:layout_marginTop="2dp" />

    <LinearLayout
        android:id="@+id/squatButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/ripple_effect"

        android:clickable="true"
        android:focusable="true"

        android:gravity="top|left"
        android:orientation="vertical"

        app:layout_constraintHeight_percent="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_the_"
        app:rippleColor="#BEBEBE">

        <TextView
            android:paddingLeft="13dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/squat"
            android:textAppearance="@style/select" />

        <ImageView
            android:paddingBottom="13dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/squat" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/benchPressButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/ripple_effect"

        android:clickable="true"
        android:focusable="true"

        android:gravity="top|left"
        android:orientation="vertical"

        app:layout_constraintHeight_percent="0.23"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/squatButton"
        app:rippleColor="#BEBEBE">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bench_press"
            android:textAppearance="@style/select"
            android:paddingLeft="13dp"/>

        <ImageView
            android:paddingBottom="13dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/benchpress" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/deadLiftButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/ripple_effect"

        android:clickable="true"
        android:focusable="true"

        android:gravity="top|left"
        android:orientation="vertical"

        app:layout_constraintHeight_percent="0.23"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/benchPressButton"
        app:rippleColor="#BEBEBE">

        <TextView
            android:paddingLeft="13dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dead_lift"
            android:textAppearance="@style/select"
            android:layout_gravity="top|left" />

        <ImageView
            android:paddingBottom="13dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/deadlift" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
