<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0696F4"
    tools:context=".Step2DeadliftActivity">

    <TextView
        android:id="@+id/step2"
        android:layout_width="180dp"
        android:layout_height="58dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical"
        android:text="@string/step2"
        android:textAppearance="@style/step"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/nextbutton"
        android:layout_width="15dp"
        android:layout_height="20dp"
        android:background="@drawable/nextbutton"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/attach_the_"
        android:layout_width="170dp"
        android:layout_height="22dp"
        android:gravity="center_vertical"
        android:text="@string/attach_the_"
        android:textAppearance="@style/text1"
        app:layout_constraintStart_toStartOf="@+id/step2"
        app:layout_constraintTop_toBottomOf="@+id/step2"
        android:layout_marginTop="2dp" />

    <TextView
        android:id="@+id/attach1"
        android:layout_width="285dp"
        android:layout_height="19dp"
        android:text="@string/attach1"
        android:textAppearance="@style/attach1"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="@+id/attach_the_"
        app:layout_constraintTop_toBottomOf="@+id/attach_the_"
        android:layout_marginTop="15dp" />

    <LinearLayout
        android:id="@+id/rectangle_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rectangle_1"
        android:gravity="center"
        app:layout_constraintHeight_percent="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attach1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:src="@drawable/attach1" />
    </LinearLayout>

    <TextView
        android:id="@+id/attach2"
        android:layout_width="285dp"
        android:layout_height="19dp"
        android:text="@string/attach2"
        android:textAppearance="@style/attach1"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="@+id/rectangle_1"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_1"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:id="@+id/rectangle_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rectangle_1"
        android:gravity="center"
        app:layout_constraintHeight_percent="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attach2">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:src="@drawable/attach2"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
